# Assetrack

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  WINDOWS_DEPLOYMENT.md  assetrack-service.xml  check_media.py  deploy_service.ps1  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  requirements.dev.txt  requirements.txt  serve_windows.py
asset/: admin.py  context_processors.py  urls.py
asset/forms/: __init__.py  equipment.py  equipment_record.py  forms.py  maintenance.py  software.py  software_record.py
asset/migrations/: 0001_initial.py  0002_category_company_location_status_equipment_category_and_more.py  0002_remove_software_long_name_software_decommission_date_and_more.py  0003_alter_company_email_alter_company_phone_and_more.py  0003_software_created_at_software_created_by.py  0004_rename_equepmentrecord_equipmentrecord.py  0004_rename_last_updated_software_last_updated_at.py  0005_alter_software_created_at_and_more.py  0005_equipment_inventory_number.py  0006_remove_equipment_warranty_period_and_more.py  0006_rename_last_updated_equipment_last_updated_at.py  0007_equipment_service_provider.py  0008_recordtype.py  (+66 more)
attachment/: forms.py  models.py  urls.py  views.py
core/: urls.py  views.py  wsgi.py
fixtures/: assset_calibration.json  assset_equipment_recordtype.json  assset_software_license.json  assset_software_type.json  assset_status.json
hardboiledegg/: urls.py  views.py
nginx/: nginx.conf
requestlog/: admin.py  apps.py
templates/: base.html  home.html
user/: admin.py  models.py  urls.py  views.py
(+96 files in other folders)
